# marketplace-indexer

./: .env.example  .gitignore  Cargo.toml  README.md  apibara.toml
.github/workflows/: tests.yml
src/: main.rs
src/application/builders/: indexer.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: indexer.rs  mod.rs
src/domain/handlers/: mod.rs
src/domain/handlers/event/: composite.rs  logging.rs  mod.rs
src/domain/obervers/: composite.rs  logging.rs  mod.rs
src/domain/repositories/: indexer.rs
src/domain/services/: indexing.rs  mod.rs
src/domain/value_objects/: contract_address.rs  event.rs  event_filter.rs  hexa_string.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/apibara/: indexer_repository.rs  indexing_service.rs  mod.rs  streaming_request.rs
src/infrastructure/apibara/events/: github_identifier.rs  mod.rs  topics.rs
